--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -2,9 +2,12 @@ FROM debian:10
 
 RUN apt-get update
 RUN apt-get install -y mariadb-server
+#RUN apt-get install -y mariadb-client
 RUN apt-get install -y procps
 EXPOSE 3306
-COPY add_user.sh /etc/add_user.sh
+#COPY add_user.sh /etc/add_user.sh
+#RUN mysql -e "CREATE DATABASE wordpress"
 #RUN mysql -e "CREATE DATABASE wordpress ; CREATE USER 'wordpress'@'wordpress' IDENTIFIED BY 'WBPASSWORD'; GRANT ALL PRIVILEGES ON wordpress.* TO 'wordpress'@'wordpress'"
-ENTRYPOINT ["/etc/add_user.sh"]
-CMD ["mysqld"]
+#ENTRYPOINT ["/etc/add_user.sh"]
+#CMD ["mysqld"]
+CMD tail -f
