--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ MYSQL_DATABASE=wordpress
 MYSQL_USER=wordpress
 MYSQL_PASSWORD=enterword
 
-WORDPRESS_DB_HOST=mysql
-WORDPRESS_ROOT_PASSWORD=supernovae
+WORDPRESS_DB_HOST=mysql.inception_inception_network
+WORDPRESS_ROOT_PASSWORD=WBPASSWORD
 WORDPRESS_DB_NAME=wordpress
 WORDPRESS_DB_USER=wordpress
 WORDPRESS_TABLE_PREFIX=wp
