pauffinage wp not created

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ MYSQL_DATABASE=wordpress
 MYSQL_USER=wordpress
 MYSQL_PASSWORD=enterword
 
-WORDPRESS_DB_HOST=mysql.inception_inception_network
+WORDPRESS_DB_HOST=mariadb
 WORDPRESS_ROOT_PASSWORD=WBPASSWORD
 WORDPRESS_DB_NAME=wordpress
 WORDPRESS_DB_USER=wordpress
